=== Deluge 1.3.6 (In Development) ===
==== Core ====
	* Catch & log KeyError when removing a torrent from the queued torrents set

==== GtkUI ====
	* Add move completed option to add torrent dialog
	* Prevent jitter in torrent view

=== Deluge 1.3.5 (09 April 2012) ===
==== Core ====
	* Fix not properly detecting when torrent is at end of queue
	* #2049: Preserve order when moving multiple torrents in the queue

==== GtkUI ====
	* Modified fix for #1957, keyerror with non-acsii columns
	* Fix translation of items in Sidebar and Torrent Menu
	* #2052: Fix translation of Progress bar text
	* #2071: Fix KeyError in gtkui when file priority set to value '3'
	* #2064: Fix files treeview height in Create Dialog
	* Fix missing semi-colon in deluge.desktop
	* Disable setting file priorities for seeding torrents
	* Bring MainWindow to front when opening another instance

==== WebUI ====
	* #2050: Fix 'Up Speed' column not sorting
	* Hide unused Infohash button in WebUI

==== Label ====
	* Disable unusable items for 'All' in sidebar menu
	* Fix items for translation

==== Console ====
	* Fix prefixed space for tab completing commands
	* Fix missing trailing space for command options with tab complete

==== Blocklist ====
	* Use (documented) formatdate over format_date_time

=== Deluge 1.3.4 (03 March 2012) ===
==== Core ====
	* #1921: Free disk space reporting incorrectly in FreeBSD
	* #1964: Fix unhandled UnpicklingErrors
	* #1967: Fix unhandled IndexError when trying to open a non-json conf file
	* Fix setting daemon listen interface from command line
	* #2021: Fix share ratio limit not obeyed for seeded torrents added to session
	* Add optparse custom version to prevent unnecessary loading of libtorrent
	* #1554: Fix seeding on share ratio failing for partially selected torrents
	* Add proper process title naming in ps, top etc. (Depends: setproctitle)

==== GtkUI ====
	* #1918: Fix Drag'n'Drop not working in Windows
	* #1941: Increase maximum Cache Size to 999999 (15GiB)