@@ -1,10 +1,12 @@
 === Deluge 1.3.6 (In Development) ===
 ==== Core ====
 	* Catch & log KeyError when removing a torrent from the queued torrents set
+	* Fix moving/renaming torrents with non-ascii characters in libtorrent 0.16
 
 ==== GtkUI ====
 	* Add move completed option to add torrent dialog
 	* Prevent jitter in torrent view
+	* Fix torrent creation with non-ascii characters
 
 === Deluge 1.3.5 (09 April 2012) ===
 ==== Core ====
